tests/NormalTests/paczka1/fuzzy1/58094280.err
Error in line 15: j0og3oFa S82 140,2
Error in line 20: j0og_oFa S696 72,9
Error in line 31: S696 A693 -2,1
